firefly-iii-csv.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-csv
  labels:
    app: firefly-iii-csv
spec:
  clusterIP: None
  ports:
    - port: 8080
  selector:
    app: firefly-iii-csv
    tier: frontend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-csv
  labels:
    app: firefly-iii-csv
spec:
  selector:
    matchLabels:
      app: firefly-iii-csv
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii-csv
        tier: frontend
    spec:
      containers:
      - image: fireflyiii/csv-importer:version-2.5.0
        name: firefly-iii-csv
        ports:
        - containerPort: 8080
          name: firefly-iii
        imagePullPolicy: Always
