firefly-iii.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: firefly-iii
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  selector:
    matchLabels:
      app: firefly-iii
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii
        tier: frontend
    spec:
      containers:
      - image: jc5x/firefly-iii
        name: firefly-iii
        ports:
        - containerPort: 8080
          name: firefly-iii
        volumeMounts:
        - mountPath: "/var/www/firefly-iii/storage/export"
          name: firefly-iii-export
        - mountPath: "/var/www/firefly-iii/storage/upload"
          name: firefly-iii-upload 
        imagePullPolicy: Always
      volumes:
        - name: firefly-iii-export
          persistentVolumeClaim:
            claimName: firefly-iii-export-claim
        - name: firefly-iii-upload
          persistentVolumeClaim:
            claimName: firefly-iii-upload-claim
