ingress-firefly-iii.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #    kubernetes.io/tls-acme: "true"
    #    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
  labels:
  name: firefly-iii-ingress
spec:
  rules:
  - host: firefly-iii.your-domain.org
    http:
      paths:
      - backend:
          service:
            name: firefly-iii
            port:
              number: 8080
        path: /
        pathType: Prefix
#  tls:
#  - hosts:
#    - firefly-iii.your-domain.org
#    secretName: firefly-iii.your-domain.org-tls
